[metadata]
name = openpracticelibrary-bot
version = attr: src.tweetbot.__main__.VERSION
description = Schedule Tweets for the Open Practice Library
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = open, practice, library
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
package_dir=
    =src
packages=find:
install_requires =
    pyyaml
    pylint
    urllib3

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    oplscheduletweets = src.tweetbot.__main__:main